--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -32,6 +32,94 @@ header .header-container .navigation .nav-links .nav-item a {
   text-decoration: none;
 }
 
+main {
+  color: #ffffff;
+  margin-top: 50px;
+  gap: 50px;
+  width: 100%;
+}
+main .container {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  margin: 0 auto;
+  align-items: flex-start;
+  gap: 40px;
+}
+main .container .planet-details-container {
+  display: flex;
+  flex: auto 250px;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+main .container .planet-details-container .planet-details {
+  display: flex;
+  flex-basis: 250px;
+  flex-direction: column;
+  gap: 20px;
+}
+main .container .planet-details-container .planet-details .planet-name {
+  font-family: "Antonio", sans-serif;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 3.5rem;
+}
+main .container .planet-details-container .planet-details .planet-about {
+  font-family: "League Spartan", sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 25px;
+}
+main .container .planet-details-container .planet-details .planet-source {
+  display: flex;
+  gap: 10px;
+  color: #38384f;
+}
+main .container .planet-details-container .planet-details .planet-source a {
+  color: #838391;
+}
+main .container .planet-details-container .planet-details .info-states-container {
+  font-family: "League Spartan", sans-serif;
+}
+main .container .planet-details-container .planet-details .info-states-container .info-states {
+  display: grid;
+  gap: 20px;
+}
+main .container .planet-details-container .planet-details .info-states-container .info-states .info-state-item {
+  cursor: pointer;
+  border: 1px solid #38384f;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+}
+main .container .planet-details-container .planet-details .info-states-container .info-states .active {
+  background: #419EBB;
+  border: none;
+}
+main .container .planet-info-container {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  justify-content: stretch;
+  width: 100%;
+}
+main .container .planet-info-container .info-item {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border: 1px solid #38384f;
+  padding: 25px 20px 25px;
+  gap: 5px;
+}
+main .container .planet-info-container .info-item .info-name {
+  color: #838391;
+  font-family: "League Spartan", sans-serif;
+}
+main .container .planet-info-container .info-item .info-value {
+  font-family: "Antonio", sans-serif;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -40,7 +128,7 @@ header .header-container .navigation .nav-links .nav-item a {
 body {
   background-color: black;
 }
-body::before {
+body #root {
   content: "";
   background: url("/images/background-stars.svg");
   width: 100%;
