--- a/src/assets/css/partials/_header.scss
+++ b/src/assets/css/partials/_header.scss
@@ -18,7 +18,7 @@ header {
 			}
 		}
 		.navigation {
-			width: 40%;
+			width: 500px;
 			.nav-links {
 				list-style: none;
 				display: flex;
@@ -33,6 +33,15 @@ header {
 					}
 				}
 			}
+		}
+	}
+}
+
+@media only screen and (max-width: 768px){
+	header{
+		.header-container{
+			flex-direction: column;
+			gap: 20px;
 		}
 	}
 }
