--- a/src/assets/css/abstracts/_colors.scss
+++ b/src/assets/css/abstracts/_colors.scss
@@ -1,4 +1,13 @@
 $white: #ffffff;
 $payneGrey: #38384f;
 $stack: #838391;
+
+// Colors for planets
 $mercury: #419EBB;
+$venus: #EDA249;
+$earth: #6f2ed6;
+$mars: #D14C32;
+$jupiter: #D83A34;
+$saturn: #CD5120;
+$uranus: #1ec2a4;
+$neptune: #2d68f0;
