--- a/src/assets/css/abstracts/_colors.scss
+++ b/src/assets/css/abstracts/_colors.scss
@@ -3,11 +3,22 @@ $payneGrey: #38384f;
 $stack: #838391;
 
 // Colors for planets
-$mercury: #419EBB;
-$venus: #EDA249;
+$mercury: #419ebb;
+$venus: #eda249;
 $earth: #6f2ed6;
-$mars: #D14C32;
-$jupiter: #D83A34;
-$saturn: #CD5120;
+$mars: #d14c32;
+$jupiter: #d83a34;
+$saturn: #cd5120;
 $uranus: #1ec2a4;
 $neptune: #2d68f0;
+
+$planets: (
+	mercury: $mercury,
+	venus: $venus,
+	earth: $earth,
+	mars: $mars,
+	jupiter: $jupiter,
+	saturn: $saturn,
+	uranus: $uranus,
+	neptune: $neptune,
+);
