--- a/src/assets/css/partials/_header.scss
+++ b/src/assets/css/partials/_header.scss
@@ -25,19 +25,24 @@ header {
 				display: flex;
 				justify-content: space-between;
 				.nav-item {
-					a {
-						font-family: $fontSpartan;
-						font-weight: 300;
-						color: $white;
-						text-transform: uppercase;
-						text-decoration: none;
-					}
+					font-family: $fontSpartan;
+					font-weight: 300;
+					color: $white;
+					text-transform: uppercase;
+					text-decoration: none;
+					height: 100%;
 				}
+			
+				@each $planet, $color in $planets {
+					.#{$planet}:hover {
+						border-bottom: 1px solid #{$color};
+					}
+				  }
 			}
 		}
-		.menu-icon-container {
-			display: none;
-		}
+	}
+	.menu-icon-container {
+		display: none;
 	}
 }
 
