--- a/src/assets/css/partials/_header.scss
+++ b/src/assets/css/partials/_header.scss
@@ -4,7 +4,7 @@ header {
 	color: $white;
 	font-family: $fontAntonio;
 	width: 100%;
-	border: 1px solid $payneGrey;
+	border-bottom: 1px solid $payneGrey;
 	box-sizing: border-box;
 	padding-bottom: 20px;
 	.header-container {
