--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -102,7 +102,7 @@ header .menu-icon-container {
     background-color: #070724;
     left: 0;
     bottom: 0;
-    height: calc(100% - 81px);
+    height: calc(100% - 82px);
   }
   header .header-container .navigation .nav-links .nav-item {
     display: flex;
@@ -189,6 +189,9 @@ main .container .planet-details-container {
   width: 100%;
   justify-content: space-between;
   align-items: center;
+}
+main .container .planet-details-container .planet-image {
+  z-index: -1;
 }
 main .container .planet-details-container .planet-image .image {
   max-width: 350px;
@@ -477,12 +480,13 @@ main .container .planet-info-container .info-item .info-value {
   padding: 0;
 }
 
-body {
-  background-color: #070724;
+#root #tsparticles {
+  z-index: -1;
+  position: relative;
 }
+
 body #root {
   content: "";
-  background: url("/images/background-stars.svg");
   width: 100%;
   height: 100%;
   position: sticky;
