--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -7,11 +7,15 @@
     padding: 0;
 }
 
+#root{
+    #tsparticles{
+        z-index: -1;
+        position: relative;
+    }
+}
 body{
-    background-color: #070724;
     #root{
         content: "";
-        background: url("/images/background-stars.svg");
         width: 100%;
         height: 100%;
         position: sticky;
